fix(navigation): Scrollbar
- Scrollbar is now hidden in Navigation in order to not drive me crazy for any longer

--- a/themes/hugo-docs/assets/elements/page.scss
+++ b/themes/hugo-docs/assets/elements/page.scss
@@ -22,6 +22,15 @@
     overflow-y: auto;
     transition: top $transition-time;
 
+    @include media-query(desktop) {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+
     .is-scrolled & {
       top: 0;
     }
